Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20120

SpringAnimation dumping documentation wrong

    XMLWordPrintable

Details

    Description

      Documentation for SpringAnimation property damping:

      The last sentence: "The lower the value, the faster it comes to rest." is wrong, it should be the other way around:
      "The higher the value, the faster it comes to rest."
      With the damping of 0 it never comes to rest.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            aalpert-nokia Alan Alpert (closed Nokia identity) (Inactive)
            jzellner Johannes Zellner
            Votes:
            1 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes