Augment SpringAnimation::damping documentation

Task-number: QTBUG-20120

Change-Id: Ifaa0e7eaa0f61052680338a6cfd35bb6aca63157
Reviewed-on: http://codereview.qt.nokia.com/2333
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Martin Jones <martin.jones@nokia.com>